<resources>
    <string name="app_name">التوعية الصحية </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="home_second">Home Second</string>
    <string name="no_to_dos">لا يوجد لديك اي تنبيهات </string>
    <string name="title">عنوان التنبيه </string>
    <string name="remind_me">ذكرني</string>
    <string name="choose_date">التاريخ</string>
    <string name="choose_time">الوقت</string>
    <string name="remind_date_and_time">تم وضع التذكير في  %1$s, %2$s %3$s </string>
    <string name="about">About</string>
    <string name="app_version">Version: %1$s</string>
    <string name="contact_me">You can contact me at</string>
    <string name="made_by">Made by Amany,huda,wafaa</string>
    <string name="done_label">تم</string>
    <string name="date_reminder_default">اليوم</string>
    <string name="date_error_check_again">التاريخ المدخل في الماضي</string>
    <string name="night_mode">Night Mode</string>
    <string name="night_mode_on_summary">Night mode is on</string>
    <string name="night_mode_off_summary">Night mode is off</string>
    <string-array name="snooze_options">

        <item>10 دقائق </item>

        <item>30 دقيقة </item>

        <item>1 ساعة </item>

    </string-array>
    <string name="snooze">غفوة </string>
    <string name="remove">حذف</string>
    <string name="todo_error">Please enter a Todo</string>
    <string name="night_mode_pref_key">night_mode_</string>
    <string name="example">example</string>
    <string name="aboutmyapp">aboutmyapp</string>
    <string name="abouappp">aboutmyapp</string>
    <string name="email_address">email_address</string>
    <string name="menu_send">ارسال</string>
    <string name="welcom">مرحبا</string>
    <string name="action_settings">الملف الشخصي </string>
    <string name="menu_home">الرئيسية</string>
    <string name="menu_gallery">الصور</string>
    <string name="menu_slideshow">حفلات عامة</string>
    <string name="menu_tools">الاعدادات</string>
    <string name="menu_share">مشاركة</string>
    <string name="menu_about">عن التطبيق </string>
    <string name="signIn">تسجيل الدخول</string>
    <string name="emailHint">البريد الالكتروني</string>
    <string name="passwordHint">كلمة المرور</string>
    <string name="forgetPassword">نسيت كلمة المرور ؟</string>
    <string name="login">دخول</string>
    <string name="dontHaveAccount">لا يوجد لديك حساب</string>
    <string name="signFromHere">سجل من هنا </string>
    <string name="signUp">التسجيل</string>
    <string name="nameHint">الاسم</string>
    <string name="confirmPasswordHint">تأكيد كلمة المرور</string>
    <string name="phoneNumber">رقم الجوال</string>
    <string name="sign">تسجيل</string>
    <string name="haveAccount">هل لديك حساب</string>
    <string name="clickHere">اضغط هنا</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">"المناخ "</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="fullNameRequired">الاسم كاملاً مطلوب !</string>
    <string name="emailRequired">البريد الألكتروني مطلوب!</string>
    <string name="passwordRequired">الرقم السري مطلوب !</string>
    <string name="confirmPasswordRequired">تأكيد كلمة المرور مطلوب !</string>
    <string name="confirmPasswordNotMatchesPassword">الرجاء التأكد ان كلمتا المرور متطابقة </string>
    <string name="phoneRequired">رقم الجوال مطلوب !</string>
    <string name="load_login">الرجاءالانتظار ... يتم الان التحقق من البيانات</string>
    <string name="enter__correct_email">صيغة البريد الالكتروني غير صحيحة</string>
    <string name="exist">تسجيل الخروج</string>
    <string name="loginasvistor">الدخول كزائر</string>
    <string name="menu_setting">الاعدادات</string>
    <string name="communicate">للتواصل</string>
    <string name="Restaurants">مطاعم</string>
    <string name="hotels">فنادق</string>
    <string name="information"> معلومات عن المملكة</string>
    <string name="numberimportant">أرقام تهمك</string>
    <string name="caroffices">  مكاتب سيارات و سياحية </string>
    <string name="climate">مناخ المملكة</string>
    <string name="Tourist">مكاتب سياحية</string>
    <string name="milestones">معالم</string>
    <string name="Chooselang">اختر اللغة</string>
    <string name="save">حفظ</string>
    <string name="arabiclang">العربية</string>
    <string name="englishlang">English</string>
    <string name="myAccount">حسابي</string>
    <string name="language">اللغة</string>
    <string name="home">الرئيسية</string>
    <string name="Laws">الآداب العامة</string>
    <string name="AlHasa">الاحساء</string>
    <string name="AlBaha">الباحة</string>
    <string name="Abha">ابها</string>
    <string name="Jazan">جازان </string>
    <string name="Dammam">الدمام</string>
    <string name="AlKhober">الخبر</string>
    <string name="Riyadh">الرياض </string>
    <string name="Hail">حائل </string>
    <string name="Jeddah">جدة </string>
    <string name="Tabuk">تبوك </string>
    <string name="advices"> نصائح السفر </string>
    <string name="Makkah">مكة</string>
    <string name="Medina">المدينة</string>
    <string name="city">"المدينة "</string>
    <string name="climatetext">تتمتع المملكة بمناخ مختلف في كل أنحائها حيث تمتلك الدولة مساحة كبيرة من الأراضي ، وقد مر عليها العديد من المراحل الجيولوجية خلال قرون وقرون ، كما تحتوي المملكة على العديد من التضاريس المختلفة والمرتفعات الجبلية والأودية والكثبان الرملية والهضاب والسهول .
١-فصل الربيع\n
يكون فصل الربيع في المملكة بارد نسبيا، تحديدًا في الشمال، حيث يمكن أن تنخفض درجة الحرارة في الليل إلى أقل من 15 درجة. أما المناطق الوسطى والجنوبية فهي أكثر دفئًا، حيث تبلغ متوسط الحرارة حوالي 20 درجة ليلًا. كما يصل هطول المطر في فصل الربيع إلى أعلى مستوياته، وخاصّةً بالمنطقة الوسطى،
        وجنوب غرب المملكة "فوق جبال عسير".\n
٢- فصل الصيف \n
يُؤذن الصيف ببداية ارتفاع درجات الحرارة في معظم أنحاء المملكة، باستثناء المرتفعات الجبلية في جنوب غربها والتي تشهد درجات حرارةٍ معتدلة، إلا أن درجات الحرارة تبدأ بالنزول في أواخر الليل وبداية الصباح مصحوبةً برياحٍ خفيفة، لذا لا تفوّت الاستمتاع بشواطئ المملكة الأخاذة وتجربة الغوص في بحارها البديعة.
٣- فصل الخريف \n
يستهلّ الخريف بنسمةٍ باردةٍ منعشةٍ تنسلّ على الحدود الشمالية للمملكة العربية السعودية وفي المرتفعات الجنوبية الغربية، ورغم دفء الأجواء في أوقات النهار إلا أن أمسياتها تمتاز بلُطف أجوائها المثاليّة للتجوّل على طول الواجهة البحرية لمدينة جدة، أو الاستمتاع بتناول الطعام في الهواء الطلق، أو زيارة العيون الباردة في الأحساء.\n
٤- فصل الشتاء\n
لا تفوّت فرصة اكتشاف المملكة العربية السعودية وقت شتائها الجميل؛ حيث تُعدّ بصباحاتها الساكنة ولياليها الباردة في ذلك الوقت مثالية للتخييم، ولتسلق المرتفعات، أو لمجرّد استكشاف مدن المملكة المُفعمة بالحياة والتجوّل في مرتفعاتها الخضراء. وإذا سنحت لك الفرصة؛ ستشاهد تساقط الثلوج في جبال المناطق الشمالية، حيث تكسو منحدراتها ورمالها الصحراوية.\n
</string>
    <string name="informationtext">إليك مجموعة من المعلومات العامة عن المملكة العربية السعودية : \n
1- العاصمة : الرياض. \n
2- المدن الرئيسية  : جدة ، مكة المكرمة ، المدينة المنورة  ، الدمام. \n
3-الديانة الرسمية : الإسلام. \n
4- اللغة الرسمية  : العربية  ، الإنجليزية (التجارية). \n
5-العملة : الريال السعودي. \n
6- اليوم الوطني  : 23 سبتمبر.\n
7-المناخ  : بصفة عامة حار جاف صيفا ، بارد جاف شتاءا  ، وتتميز المناطق الجنوبية بانخفاض درجات الحرارة.\n
8-أهـم الصادرات : البترول و منتجات نفطيّة 90 %.\n
</string>
    <string name="numbertext">ارقام تهمك في المملكة العربية السعودية نقدم لكم في هذا المقال نشرة لأهم الأرقام التي قد تهمك في السعودية و التي سوف تسهل عليكم العديد من الامور نقدمها لكم في قسم خدمات ضمن موقعكم المميز دليل السعودية الذي يستفرد بتقديم افضل الخدمات و العروض و المواقع المهمة في المملكة اهلا بكم :

أرقام قد تهمك في السعودية:

 ١-الأرقام الأمنية\n

• الشرطة: 999 \n

• الحوادث (المرور): 993 \n

• الإسعاف: 997 \n

• الإطفاء: 998 \n

• مكافحة المخدرات: 995 \n

• أمن الطرق: 996\n

• الاستخبارات العامة: 985\n

 ٢-مشاكل أو استفسارات في الخدمات الهاتفية \n

• الاستعلامات: 905 \n

• الأعطال: 904 \n

• المكالمات الدولية: 900 \n

• الساعة الناطقة: 961 \n

• الهاتف الجوال: 902 \n

الاستعلامات الأخرى \n

• الأرصاد الجوية: 966\n

الطيران والنقل \n

• الحجز المركزي: 4884444 \n

• استعلامات المطار: 2221700 \n

• حركة القطارات: 4489678 \n

• النقل الجماعي: 8001249999\n

</string>
    <string name="lawtext">تُستلهم الآداب العامة في المملكة العربية السعودية من تراثها الثقافي ودينها الإسلامي وقيَم مجتمعها المتسقة مع الأخلاق الإنسانية، مثل احترام الآخرين واللباقة في الأماكن العامة واحترام الخصوصية.

لا تتناسب مظاهر الحميمية العلنية مع قيَم وثقافة المجتمع، كما يجب على الزوار تفادي استخدام التعابير والإيماءات غير اللائقة

الدين
تُغلق الموسيقى في الأماكن العامة وتُقفل العديد من المتاجر في أوقات الصلوات الخمسة كلّ يوم، وفي شهر رمضان من كل عام يصوم المسلمون من الفجر حتى الغسق، وعليه يجب احترام شعائرهم الدينية من خلال تجنّب تناول الطعام أو الشراب في الأماكن العامة خلال أوقات الصوم.

الكحول والمواد غير المشروعة
يُحظر بيع وشراء واستهلاك وجلب الكحول أو المخدّرات إلى المملكة العربية السعودية
</string>
</resources>