<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_Medicine_list"
            android:icon="@drawable/ic_free_medicine"
            android:title="@string/Medicine_list" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_aboutapp"
                android:icon="@drawable/ic_info_black"
                android:title="@string/menu_about" />

        </menu>
    </item>
    <item
        android:id="@+id/nav_exitapp"
        android:icon="@drawable/ic_exit_to_app"
        android:title="@string/exist" />
</menu>

